# flatppl-rust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
crates/: .gitkeep
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs  provenance.rs  resolve.rs
crates/cli/tests/: convert.rs  convert_hs3.rs  determinize.rs  fmt.rs  lint.rs  stablehlo.rs
crates/cli/tests/common/: mod.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: id.rs  lib.rs  module.rs  node.rs  ty.rs
crates/determinizer/: Cargo.toml
crates/determinizer/src/: build.rs  conformance.rs  crossmodule.rs  density.rs  disintegrate.rs  driver.rs  invert.rs  jointchain.rs  kernel.rs  lib.rs  marginal.rs  refuse.rs  sample.rs
crates/determinizer/src/canon/: dce.rs  flatten.rs  fold.rs  inline.rs  mod.rs
crates/determinizer/tests/: autoinputs_kernel_golden.rs  broadcast_golden.rs  canon_dce_golden.rs  canon_golden.rs  conformance.rs  conformance_backstop.rs  conjugate_golden.rs  crossmodule_golden.rs  density_golden.rs  densityof_golden.rs  disintegrate_golden.rs  jointchain_golden.rs  kchain_autoinputs_seam_golden.rs  likelihood_derived_params_golden.rs  numeric.rs  pushfwd_bijection_support_golden.rs  pushfwd_golden.rs  pushfwd_projection_golden.rs  refuse.rs  reified_kernel_golden.rs  sample_golden.rs
crates/fileaccess/: Cargo.toml
crates/fileaccess/src/: cache.rs  fetch.rs  lib.rs  location.rs  trust.rs
crates/flatpir/: Cargo.toml  README.md
crates/flatpir/src/: error.rs  json.rs  lib.rs  reader.rs  sexpr.rs  writer.rs
crates/flatpir/tests/: diagnostics.rs  json_roundtrip.rs  roundtrip.rs
crates/hs3/: Cargo.toml  README.md
crates/hs3/src/: builder.rs  convert.rs  data.rs  dist_spec.rs  distribution.rs  error.rs  expr.rs  histfactory.rs  lib.rs  likelihood.rs  model.rs  presets.rs  pyhf.rs
crates/hs3/tests/: coherence.rs  constraint_type_alias.rs  data_tables.rs  dists.rs  doc_comments.rs  expr_dists.rs  golden.rs  histfactory_no_axes.rs  histfactory_shapesys_relative.rs  histfactory_shapesys_vals.rs  named_ranges.rs  negatives.rs  paper.rs  poly_function.rs  pyhf_poi_bounds.rs  pyhf_real.rs  pyhf_uncorrelated.rs
crates/hs3/tests/fixtures/: 2bin_1channel.json  multichan_old.json  paper_gaussian.json  paper_histfactory.json  paper_product.json
crates/infer/: Cargo.toml  README.md  catalogue.ron
crates/infer/catalogues/: distances.ron  ext-linear-algebra.ron  particle-physics.ron  polynomials.ron  special-functions.ron
crates/infer/src/: consteval.rs  lib.rs  modules.rs  ops.rs  trace.rs
crates/infer/src/catalogue/: lower.rs  mod.rs
crates/infer/tests/: bayesian_inference_golden.rs  const_eval.rs  cross_module_autotrace.rs  golden.rs  load_module_golden.rs  measure_eval_prims.rs  nested_data_structures.rs  reification.rs  spec_coverage_measures.rs  spec_coverage_scalars_phases.rs  spec_coverage_shape_gaps.rs  std_module_golden.rs  value_set_invariant.rs
crates/lint/: Cargo.toml
crates/lint/src/: builtins.rs  lib.rs  rules.rs
crates/lint/tests/: builtins_sync.rs  coverage.rs  infer_bridge.rs  rules.rs
crates/lsp/: Cargo.toml
crates/lsp/examples/: lsp_perf.rs
crates/lsp/src/: capabilities.rs  db.rs  lib.rs  line_index.rs  main.rs  pool.rs  queries.rs  server.rs
crates/lsp/tests/: protocol_smoke.rs
crates/stablehlo/: Cargo.toml
crates/stablehlo/docs/: inputs-outputs-abi.md
crates/stablehlo/src/: emitter.rs  lib.rs  mlir.rs  modes.rs  ops.rs  refuse.rs  registry.rs  types.rs
crates/stablehlo/tests/: golden.rs
crates/stablehlo/tests/goldens/: bernoulli_iid_sample.mlir  bernoulli_logdensity.mlir  bernoulli_sample.mlir  beta_iid_sample.mlir  beta_logdensity.mlir  beta_sample.mlir  binomial_iid_sample.mlir  binomial_logdensity.mlir  binomial_sample.mlir  categorical0_logdensity.mlir  categorical0_sample.mlir  categorical_iid_sample.mlir  categorical_logdensity.mlir  categorical_sample.mlir  categorical_single_iid_sample.mlir  cauchy_logdensity.mlir  cauchy_sample.mlir  cauchy_touniform_logdensity.mlir  chained_rand_sample.mlir  chi_squared_logdensity.mlir  chi_squared_sample.mlir  dirac_logdensity.mlir  dirac_sample.mlir  dirichlet_iid_sample.mlir  dirichlet_logdensity.mlir  dirichlet_sample.mlir  exponential_iid_sample.mlir  exponential_logdensity.mlir  exponential_sample.mlir  gamma_iid_sample.mlir  gamma_logdensity.mlir  gamma_sample.mlir  generalized_normal_logdensity.mlir  generalized_normal_sample.mlir  geometric_iid_sample.mlir  geometric_logdensity.mlir  geometric_sample.mlir  inverse_gamma_logdensity.mlir  inverse_gamma_sample.mlir  inverse_wishart_logdensity.mlir  (+37 more)
crates/syntax/: Cargo.toml  README.md
crates/syntax/src/: error.rs  lib.rs  parser.rs  printer.rs  token.rs
crates/syntax/tests/: cross_engine.rs  roundtrip.rs
crates/syntax/tests/cross_engine/: emit-flatpir.cjs
crates/wasm-api/: Cargo.toml
crates/wasm-api/src/: lib.rs
docs/: hs3_pyhf_converter_bugs.md
fixtures/flatpir/: aggregate.flatpir  docs.flatpir  helpers-annotated.flatpir  helpers.flatpir  model-annotated.flatpir  model.flatpir  reified.flatpir  user-call.flatpir  values.flatpir
fixtures/flatppl/: eight-schools.flatppl  einsum-matmul.flatppl  expressions.flatppl  lambdas.flatppl  metricsum.flatppl  minimal.flatppl  modules.flatppl  values.flatppl
fixtures/flatppl/bayesian_inference/: bayesian_inference_1.flatppl  bayesian_inference_2.flatppl  bayesian_inference_3.flatppl  bayesian_inference_4.flatppl  bayesian_inference_common.flatppl  bayesian_inference_priors.flatppl
fixtures/flatppl/load_module/: helpers.flatppl  model.flatppl
fixtures/flatppl/queries/: bayesian_inference_1_likelihood.flatppl  bayesian_inference_1_posterior.flatppl  bayesian_inference_1_prior.flatppl  bayesian_inference_2_posterior.flatppl  bayesian_inference_3_posterior.flatppl  bayesian_inference_4_posterior.flatppl  eight_schools_posterior.flatppl  eight_schools_prior.flatppl  nested_crossmodule.flatppl  pushfwd_arbitrary_f_refuses.flatppl  pushfwd_exp_lognormal.flatppl  (+3 more)
