# FlatPPL Rust monorepo — virtual workspace.
# No member crates yet; they will live under `crates/` and are picked up by the
# glob below. Shared metadata and dependency versions are centralised here so
# member crates can opt in with `<field>.workspace = true`.

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/flatppl/flatppl-rust"

[workspace.dependencies]
