# FlatPPL Rust monorepo — virtual workspace.
# Member crates live under `crates/` and are picked up by the glob below.
# Shared metadata and dependency versions are centralised here so member
# crates can opt in with `<field>.workspace = true`.

[workspace]
resolver = "3"
members = ["crates/*"]

# Release artifacts are shipped tools (notably the lean `flatppl-fmt`): strip
# symbols for a smaller binary. Debug/`dev` builds keep symbols for backtraces.
[profile.release]
strip = true

# Size-optimized profile for the SHIPPED flatppl-lsp binary bundled into the
# VS Code extension vsix (it is downloaded on every install). Inherits release
# (so `strip = true` still applies) and adds aggressive size flags. `panic =
# "abort"` is safe: the LSP daemon has no catch_unwind, and abort-on-panic is
# standard for a long-running server (the client reconnects). NOT for general
# release artifacts — `flatppl-cli`/`flatppl-fmt` keep using [profile.release].
[profile.release-size]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/flatppl/flatppl-rust"

[workspace.dependencies]
ariadne = "0.6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
