[package]
name = "flatppl-cli"
description = "The `flatppl` command-line driver: convert, infer, format, and lint FlatPPL / FlatPIR (verbs are cargo features)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# One driver binary; later capabilities (infer, lower, check) arrive as
# subcommands, heavy/optional ones behind cargo features. The library crates
# stay binary-free (they compile to wasm32 and link into PyO3/jlrs/cxx).
[lib]
name = "flatppl_cli"
path = "src/lib.rs"

[[bin]]
name = "flatppl"
path = "src/main.rs"

[[bin]]
name = "flatppl-fmt"
path = "src/bin/fmt_lint.rs"
required-features = ["fmtlint"]

[features]
# Verbs are opt-in cargo features so heavy capabilities never burden the
# default build; `infer` is light and rides along by default.
default = ["convert", "infer", "prepare", "fmtlint", "determinize"]
convert = ["dep:flatppl-flatpir"]
# `infer` resolves cross-module deps from the cache only (no network), so it
# links `flatppl-fileaccess` WITHOUT its `net` feature — no TLS stack.
infer = ["dep:flatppl-infer", "dep:flatppl-flatpir", "dep:flatppl-fileaccess"]
# `prepare` is the only network-touching verb: it readies a model for offline use
# by fetching its remote deps into the cache, so it turns on
# `flatppl-fileaccess/net` (ureq + rustls).
prepare = ["dep:flatppl-fileaccess", "dep:flatppl-flatpir", "flatppl-fileaccess/net"]
hs3 = ["dep:flatppl-hs3", "dep:flatppl-flatpir"]
fmtlint = ["dep:flatppl-lint"]
# `determinize` legalizes a FlatPPL model to the deterministic FlatPDL profile
# (eliminate the measure layer), refusing constructs it cannot lower.
determinize = ["dep:flatppl-determinizer"]

[dependencies]
flatppl-core = { path = "../core" }
flatppl-syntax = { path = "../syntax" }
flatppl-flatpir = { path = "../flatpir", optional = true }
flatppl-infer = { path = "../infer", optional = true }
flatppl-hs3 = { path = "../hs3", optional = true }
flatppl-lint = { path = "../lint", optional = true }
flatppl-determinizer = { path = "../determinizer", optional = true }
# Source resolution + remote cache. `net` (TLS) is enabled only via the `prepare`
# feature, so `infer` (cache-only) and the lean `flatppl-fmt` stay TLS-free.
flatppl-fileaccess = { path = "../fileaccess", optional = true }
clap = { workspace = true }
clap_complete = { workspace = true }
ariadne = { workspace = true }
serde_json = { workspace = true }
