[package]
name = "flatppl-fileaccess"
description = "Resolve a FlatPPL `source` (local path or http/https URL) to a local file, with the spec §sec:url-cache shared cache for remote content. No file-format decoding."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# A NATIVE host-layer library (fs + optional network): used by `flatppl-cli`
# to resolve `load_module` / `load_data` sources. Unlike core/syntax/infer it is
# NOT wasm-targeted (URL loading in a browser is the JS host's concern), but it
# stays binary-free like the other libraries.
[lib]
name = "flatppl_fileaccess"
path = "src/lib.rs"

[features]
# The pure `Location` resolver (spec §04 join) is ALWAYS available with zero
# dependencies. The on-disk remote cache + `Resolver` (Cache/Fetcher/TrustOracle)
# and the deps it needs live behind `cache` (on by default). `net` adds the real
# HTTP client on top. A pure-resolution consumer that never fetches — the LSP,
# which can't obtain URL-trust approval over the protocol, so the editor client
# fetches and the LSP only resolves+reads client-fed content — depends with
# `default-features = false` and links only `Location` (no sha2/serde/TLS).
default = ["cache"]
cache = ["dep:sha2", "dep:dirs", "dep:serde", "dep:serde_json"]
net = ["cache", "dep:ureq"]

[dependencies]
sha2 = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
ureq = { version = "2", optional = true }
