[package]
name = "flatppl-hs3"
description = "HS3 (HEP Statistics Serialization Standard) → FlatPPL importer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flatppl-core = { path = "../core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
flatppl-syntax = { path = "../syntax" }
