[package]
name = "flatppl-lsp"
description = "FlatPPL language server — diagnostics and hover over a salsa-incremental database, driven by flatppl-infer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "flatppl-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
flatppl-core = { path = "../core" }
flatppl-syntax = { path = "../syntax" }
flatppl-infer = { path = "../infer" }
# Only the pure §04 `Location` resolver — NOT the cache/fetch/trust layer. The
# LSP never fetches (no protocol-level trust prompt); URL-dep content arrives as
# client-pushed salsa inputs. `default-features = false` ⇒ no sha2/serde/TLS.
flatppl-fileaccess = { path = "../fileaccess", default-features = false }
salsa = "0.26"
crossbeam-channel = "0.5"
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = { workspace = true }
