[package]
name = "flatppl-stablehlo"
description = "FlatPDL → textual StableHLO emitter."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
flatppl-core = { path = "../core" }
flatppl-determinizer = { path = "../determinizer" }

[dev-dependencies]
flatppl-infer = { path = "../infer" }
flatppl-syntax = { path = "../syntax" }
flatppl-flatpir = { path = "../flatpir" }
