[package]
name = "flatppl-wasm-api"
description = "WebAssembly (wasm-bindgen) API exposing FlatPPL conversion to JavaScript hosts (the web gallery, …)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
# `cdylib` for the wasm artifact (wasm-pack/wasm-bindgen); `rlib` so the
# pure-Rust core (`convert_str`) is usable + unit-testable on the host.
crate-type = ["cdylib", "rlib"]

[dependencies]
flatppl-hs3 = { path = "../hs3" }
flatppl-syntax = { path = "../syntax" }

# wasm-bindgen is pulled in ONLY for the wasm target, so host builds (and the
# workspace's host CI: fmt / clippy / test) never compile or link it — the
# `convert_str` core stays pure Rust and host-verifiable.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
# Recent Rust wasm32 toolchains emit bulk-memory ops by default, but the
# wasm-opt bundled with wasm-pack validates WITHOUT that feature and rejects
# them ("Bulk memory operations require bulk memory [--enable-bulk-memory]").
# Skip wasm-opt: the release .wasm is already valid, this is a lazy-loaded
# convert artifact where size isn't critical, and it decouples the build from
# the bundled binaryen version. Re-enable with a newer binaryen if size matters.
wasm-opt = false
